--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ yarn-error.log
 
 # Miscellaneous
 .env
+environment.*
+environments/*
 src/environments/environment.development.ts
 src/environments/environment.ts
 /.angular/cache
