--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           node-version: 20.7.0
       - run: npm ci
-      - run: npm test
+      - run: npm test --browsers=ChromeHeadless
